# lightburn-cli

./: README.md  lightburn-cli  pyproject.toml  requirements.txt  todo.md
docs/: Layers Example.docx  Layers Example.lbrn2  lbrn2 format.md
examples/: Cable Box - Chapa 80x60.lbrn2  example-template.lbrn2  example.lbrn2
src/: lightburn_file.py  main.py  material_manager.py  update_base.py  update_loader.py  validation_base.py  validation_loader.py
src/commands/: __init__.py  _base.py  _discovery.py  material.py  rules.py  update.py  validate.py
src/urules/: __init__.py  set_power.py  tag_comment.py
src/vrules/: layers.py  shape.py
