[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightburn-cli"
version = "0.1.0"
description = "A modular CLI tool to validate Lightburn .lbrn2 files against configurable rules"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL 3.0"}
authors = [
    {name = "Your Name", email = "ranaur2008@ranaur.net"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GPL 3.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
lightburn-cli = "main:main"

[project.urls]
Homepage = "https://github.com/ranaur/lightburn-cli"
Repository = "https://github.com/ranaur/lightburn-cli"
Issues = "https://github.com/ranaur/lightburn-cli/issues"
